--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://mhlr.github.com" # the base hostname & protocol for your site
-twitter_username: mhlr
+twitter_username: dmhlr
 github_username:  mhlr
 
 # Build settings
